2006-01-04  Thomas Wood  <thos@gnome.org>

	* engines/lighthouseblue/src/lighthouseblue_rc_style.c:
	(theme_parse_boolean):
	* engines/lighthouseblue/src/lighthouseblue_style.c: (draw_arrow),
	(lighthouseblue_style_class_init):
	* engines/lighthouseblue/src/util.c:

	Applied Lighthouseblue engine patch from bug 321140

2006-01-03  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/hc/src/hc-style.c: (hc_draw_flat_box),
	(hc_style_class_init):
	Add a hc_draw_flat_box function, that calls the gtk_paint_box
	function for tooltips to avoid the hardcoded black border that
	the default engine uses. Closes bug #318151.

2006-01-02  Thomas Wood  <thos@gnome.org>

	* NEWS:
	* configure.ac:

	Updated for 2.7.2

2006-01-02  Richard Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c: (draw_arrow):
	* engines/clearlooks/src/support.c: (cl_find_combo_box_widget),
	(cl_is_combo_box):
	* engines/clearlooks/src/support.h:

	Prefixed some function with cl_ to avoid symbol conflicts with
	other engines. Based on a patch from #315562.

2005-12-31  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c: (draw_box_gap),
	(draw_box): Fix some possible NULL dereferenciations.

2005-12-30  Richard Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c: (draw_shadow):

	Added an extra check for the entry widget. Prevents a crash
	in evolution.

2005-12-26  Richard Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c: (draw_box):

	Don't draw menubar on GNOME panel.

	* engines/clearlooks/src/support.c: (cl_is_gnome_panel):
	* engines/clearlooks/src/support.h:

	Added function to check if the widget is the GNOME panel.

2005-12-26  Richard Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_set_widget_parameters), (draw_box),
	(clearlooks_style_init_from_rc):
	* engines/clearlooks/src/clearlooks_types.h:
